--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog-Z Bootstrap 5.0 HTML Template</title>
+    <title>Spring Garden MENU</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'fontawesome/css/all.min.css'%}">
     <link rel="stylesheet" href="{% static 'css/templatemo-style.css' %}">
@@ -28,9 +28,9 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'index' %}">
                 <i class="fas fa-film mr-2"></i>
-                Catalog-Z
+                SPRING GARDEN RESTAURANT
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -38,15 +38,24 @@ https://templatemo.com/tm-556-catalog-z
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-1 active" aria-current="page" href="index.html">Photos</a>
+                    <a class="nav-link nav-link-1 active" aria-current="page" href="{% url 'index' %}">Photos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-2" href="videos.html">Videos</a>
+                    <a class="nav-link" href="{% url 'food_create' %}">Create Food</a>
                 </li>
+                
 
+
+
+                
                 {% if user.is_authenticated %}
-                <li class="nav-item">Hello {{user.first_name}}
+                <li class="nav-item">Hello {{user.username}}
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'cartview' user.pk %}">CART</a>
+                </li>  
+             
+
                  <li class="nav-item">
                     <a class="nav-link nav-link-3" href="accounts/logout">Logout</a>
                 </li>
@@ -66,25 +75,25 @@ https://templatemo.com/tm-556-catalog-z
         </div>
     </nav>
 
-    <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="{% static 'img/hero.jpg' %}">
-        <form class="d-flex tm-search-form">
-            <input class="form-control tm-search-input" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success tm-search-btn" type="submit">
-                <i class="fas fa-search"></i>
-            </button>
-        </form>
-    </div>
+    
+  
+        <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="{% static 'img/ahero.jpg' %}">    
+            <form class="d-flex tm-search-form" method="post" action="{% url 'food_search' %}">
+            {% csrf_token %}
+            <input class="form-control tm-search-input" name="food_name" type="search" placeholder="Search" aria-label="Search" value="{{ search_food_name }}">
+            <button class="btn btn-outline-success tm-search-btn" type="submit"><i class="fas fa-search"></i></button>
+         </form>
+        </div>
+    
+    
+
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
-                Latest Photos
+                Latest Menu
             </h2>
-            <div class="col-6 d-flex justify-content-end align-items-center">
-                <form action="" class="tm-text-primary">
-                    Page <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> of 200
-                </form>
-            </div>
+            
         </div>
 
         
@@ -96,7 +105,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="{{dest.img.url}}" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>{{dest.name}}</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="{% url 'detail' dest.pk %}">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -106,12 +115,25 @@ https://templatemo.com/tm-556-catalog-z
 
 
                 </div>
+
+                <!-- CHECKOUT  -->
+                
+                   
+
             </div>
             {% endfor %}
             {% include 'includes/paginator.html' %}      
         </div> <!-- row -->
                 
-           
+    
+
+        
+
+
+
+
+
+
                  
         
     </div> <!-- container-fluid, tm-container-content -->
@@ -120,8 +142,15 @@ https://templatemo.com/tm-556-catalog-z
         <div class="container-fluid tm-container-small">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-12 px-5 mb-5">
-                    <h3 class="tm-text-primary mb-4 tm-footer-title">About Catalog-Z</h3>
-                    <p>Catalog-Z is free <a rel="sponsored" href="https://v5.getbootstrap.com/">Bootstrap 5</a> Alpha 2 HTML Template for video and photo websites. You can freely use this TemplateMo layout for a front-end integration with any kind of CMS website.</p>
+                    <h3 class="tm-text-primary mb-4 tm-footer-title">About SPRING GARDEN</h3>
+                    <p>Welcome to Springs Garden, where we take pride in crafting culinary experiences that celebrate the vibrant flavors of meticulously sourced, high-quality ingredients. Nestled amidst lush surroundings, our restaurant is a sanctuary for food enthusiasts seeking the essence of freshness and taste.
+                        At Springs Garden we aim to maintain a home-like vibe and bring to you a selection of hearty food fare.
+                        
+                        Be it your Sunday lazy brunch or for a quick bite; we have got you covered. We take pride over the recurrent loyalty of our patrons and welcome you to treat yourself with our chef’s specialties.
+                        
+                        You visit us with empty tummies and we promise to let you go with happy hearts and flavorsome food choices.
+                        
+                        If you have made a stop here, look no further, be it a birthday celebration, feast or a special occasion, we make sure that your visit here is full of joy, warmth and zest!</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Our Links</h3>
@@ -146,7 +175,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="row">
                 <div class="col-lg-8 col-md-7 col-12 px-5 mb-3">
-                    Copyright 2020 Catalog-Z Company. All rights reserved.
+                    Copyright 2023 Catalog-Z Company. All rights reserved.
                 </div>
                 <div class="col-lg-4 col-md-5 col-12 px-5 text-right">
                     Designed by <a href="https://templatemo.com" class="tm-text-gray" rel="sponsored" target="_parent">TemplateMo</a>
