--- a/templates/base.html
+++ b/templates/base.html
@@ -41,14 +41,14 @@
              
 
                  <li class="nav-item">
-                    <a class="nav-link nav-link-3" href="accounts/logout">Logout</a>
+                    <a class="nav-link nav-link-3" href="http://127.0.0.1:8000/accounts/logout">Logout</a>
                 </li>
                 {% else %}
                  <li class="nav-item">
-                    <a class="nav-link nav-link-3" href="accounts/register">Register</a>
+                    <a class="nav-link nav-link-3" href="http://127.0.0.1:8000/accounts/register">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-3" href="accounts/login">Login</a>
+                    <a class="nav-link nav-link-3" href="http://127.0.0.1:8000/accounts/login">Login</a>
                 </li>
                 {% endif %}
                
