--- a/templates/food_create.html
+++ b/templates/food_create.html
@@ -1,6 +1,4 @@
 {% extends 'base.html' %}
- 
-
 
 {% block content %}
 
@@ -18,7 +16,7 @@
     </form>
   {% else %}
 
-    <a href="{% url 'index' %}" class="btn btn-primary">BACK HOME - NO ACCESS </a>...
+    <a href="{% url 'index' %}" class="btn btn-primary">BACK HOME - NO ACCESS </a>
   {% endif %}
 
   
