--- a/templates/index.html
+++ b/templates/index.html
@@ -7,25 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spring Garden MENU</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/templatemo-style.css' %}"> 
     <link rel="stylesheet" href="{% static 'fontawesome/css/all.min.css'%}">
-    <link rel="stylesheet" href="{% static 'css/templatemo-style.css' %}">
-<!--
-    
-TemplateMo 556 Catalog-Z
 
-https://templatemo.com/tm-556-catalog-z
-
--->
 </head>
 <body>
     <!-- Page Loader -->
     <div id="loader-wrapper">
         <div id="loader"></div>
-
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
-
     </div>
+
+
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'index' %}">
@@ -37,16 +31,10 @@ https://templatemo.com/tm-556-catalog-z
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link nav-link-1 active" aria-current="page" href="{% url 'index' %}">Photos</a>
-                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'food_create' %}">Create Food</a>
                 </li>
-                
-
-
-
                 
                 {% if user.is_authenticated %}
                 <li class="nav-item">Hello {{user.username}}
@@ -59,6 +47,11 @@ https://templatemo.com/tm-556-catalog-z
                  <li class="nav-item">
                     <a class="nav-link nav-link-3" href="accounts/logout">Logout</a>
                 </li>
+                <li class="nav-item">
+                    <!--<a class="nav-link nav-link-1 active" aria-current="page" href="{% url 'index' %}">Photos</a>-->
+                    <a class="nav-link nav-link-3" href="{% url 'profile' %}">Profile</a>
+                </li>
+
                 {% else %}
                  <li class="nav-item">
                     <a class="nav-link nav-link-3" href="accounts/register">Register</a>
@@ -66,10 +59,9 @@ https://templatemo.com/tm-556-catalog-z
                 <li class="nav-item">
                     <a class="nav-link nav-link-3" href="accounts/login">Login</a>
                 </li>
+            
                 {% endif %}
-               
-
-
+            
             </ul>
             </div>
         </div>
@@ -77,14 +69,14 @@ https://templatemo.com/tm-556-catalog-z
 
     
   
-        <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="{% static 'img/ahero.jpg' %}">    
-            <form class="d-flex tm-search-form" method="post" action="{% url 'food_search' %}">
-            {% csrf_token %}
-            <input class="form-control tm-search-input" name="food_name" type="search" placeholder="Search" aria-label="Search" value="{{ search_food_name }}">
-            <button class="btn btn-outline-success tm-search-btn" type="submit"><i class="fas fa-search"></i></button>
-         </form>
-        </div>
-    
+    <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="{% static 'img/ahero.jpg' %}">    
+        <form class="d-flex tm-search-form" method="post" action="{% url 'food_search' %}">
+        {% csrf_token %}
+        <input class="form-control tm-search-input" name="food_name" type="search" placeholder="Search" aria-label="Search" value="{{ search_food_name }}">
+        <button class="btn btn-outline-success tm-search-btn" type="submit"><i class="fas fa-search"></i></button>
+        </form>
+    </div>
+
     
 
 
@@ -110,14 +102,14 @@ https://templatemo.com/tm-556-catalog-z
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
                     {% if dest.offer %}
-                    <span class="tm-text-gray-light">{{dest.desc}}</span>{% endif %}
-                    <span>{{dest.price}}</span>
+                    <i class="fas fa-flag"></i>{% endif %}
+                    <span class="tm-text-gray-light">{{dest.desc}}</span><span>${{dest.price}}</span>
 
 
                 </div>
 
                 <!-- CHECKOUT  -->
-                
+                 <!--  -->
                    
 
             </div>
