--- a/templates/paypal_payment.html
+++ b/templates/paypal_payment.html
@@ -103,7 +103,7 @@
                 <thead class="thead-dark">
                     <tr>
                         <th class="thumb">
-                            EMAIL
+                            NAME
                         </th>
                         <th class="thumb">
                             ADDRESS
