--- a/templates/paypal_payment.html
+++ b/templates/paypal_payment.html
@@ -14,11 +14,7 @@
         <h2 class="col-6 tm-text-primary">
             ORDER STATUS
         </h2>
-        <div class="col-6 d-flex justify-content-end align-items-center">
-            <form action="" class="tm-text-primary">
-                Page <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> of 200
-            </form>
-        </div>
+        
     </div>
 
     <div class="container my-3">
@@ -71,30 +67,22 @@
                     
                 {% endfor %}    
 
+                <tr><td colspan="4"><button type="submit" name="delete_order" value="delete_order">ORDER 삭제하기</button>
+                    {% csrf_token %}</td>
+                    
+
+                </tr>
 
             </tbody>
         </table>
     
     </div>
 
-    <table class="table">
-        <thead class="thead-dark">
-                    <tr><td><button type="submit" name="delete_order" value="delete_order">ORDER 삭제하기</button>
-                        {% csrf_token %}
-
-                    </td>
-                    
-
-        </tr>
-    
-    </thead></table>
-
-
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
-                ORDER ADDRESS
+                BILLING ADDRESS
             </h2>
 
 
